--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.j.sakthikanth.onchat.MainPage">
+    tools:context="com.j.sakthikanth.onchats.MainPage">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
