--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
     android:layout_width="match_parent"
@@ -8,9 +8,17 @@
     android:paddingBottom="50dp">
 
 
-    <ScrollView
+    <ListView
+        android:id="@+id/list_hold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+    </ListView>
+  <!--  <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
         <LinearLayout
             android:id="@+id/all_contacts"
             android:orientation="vertical"
@@ -25,4 +33,6 @@
     </ScrollView>
 
 
-</LinearLayout>
+-->
+
+</RelativeLayout>
