--- a/app/src/main/res/menu/menu_main_page.xml
+++ b/app/src/main/res/menu/menu_main_page.xml
@@ -7,4 +7,11 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/refresh_cnct"
+        android:orderInCategory="100"
+        android:title="Refresh"
+
+        app:showAsAction="never"
+        ></item>
 </menu>
