--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -1,7 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:paddingBottom="70dp"
+    >
     <ListView android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -14,5 +16,5 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="No contacts to display!"/>
+        android:text="Loading Please wait..."/>
 </LinearLayout>
