--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -45,106 +45,11 @@
                 android:contextClickable="true"
                 android:gravity="bottom">
 
-                <LinearLayout
-                    android:id="@+id/date_indctr"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
-                    android:gravity="center_horizontal"
-                    android:weightSum="1">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Aug 26"
-                        android:textAlignment="center"
-                        android:textSize="14sp"
-                        android:background="@drawable/round"
-                        android:gravity="center_horizontal|center"
-                        android:padding="2dp"
-                        android:paddingLeft="10dp"
-                        android:paddingRight="30dp"
-                        android:layout_weight="0.17" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/single_msg_cont"
-                    android:orientation="horizontal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="bottom"
-                    android:elevation="10dp"
-                    android:paddingTop="30dp">
 
 
-                    <LinearLayout
-                        android:id="@+id/msg_txt_layout"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="10dp"
-                        android:paddingLeft="20dp"
-                        android:background="@drawable/left_arrow"
-                        android:paddingRight="30dp"
-                        android:gravity="center_horizontal|clip_horizontal"
-                        android:layout_marginLeft="10dp">
-                        <TextView
-                            android:id="@+id/recv_msg_txt"
-                            android:text="Most of the preceding properties are also available from the new android:inputType
-attribute, added in Android 1.5 as part of adding “soft keyboards” to Android (discussed
-in Chapter 11)."
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:paddingLeft="10dp"
-                            android:textColor="?attr/editTextColor"
-                            android:textSize="16sp"
-                            android:textAllCaps="false"
-                            android:paddingRight="10dp"
-                            android:maxWidth="250dp"
-                            android:lineSpacingExtra="3dp" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/my_single_msg_cont"
-                    android:orientation="horizontal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="bottom|right"
-                    android:elevation="10dp"
-                    android:layout_gravity="right"
-                    android:paddingTop="30dp"
-                    android:paddingRight="10dp">
 
 
-                    <LinearLayout
-                        android:id="@+id/my_msg_txt_layout"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="10dp"
-                        android:paddingLeft="20dp"
-                        android:background="@drawable/right_arrow"
-                        android:paddingRight="30dp"
-                        android:gravity="center_horizontal|clip_horizontal"
-                        android:layout_marginLeft="10dp">
-                        <TextView
-                            android:id="@+id/my_recv_msg_txt"
-                            android:text="Another flavor of field is one
-AutoCompleteTextView widget, discussed in greater detail in Chapter 12."
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:paddingLeft="10dp"
-                            android:textColor="?attr/editTextColor"
-                            android:textSize="16sp"
-                            android:textAllCaps="false"
-                            android:paddingRight="10dp"
-                            android:maxWidth="250dp"
-                            android:lineSpacingExtra="3dp" />
 
-                    </LinearLayout>
-
-                </LinearLayout>
 
 
             </LinearLayout>
@@ -160,7 +65,7 @@ AutoCompleteTextView widget, discussed in greater detail in Chapter 12."
         android:layout_height="wrap_content"
         android:weightSum="1"
         android:id="@+id/msg_enter_container"
-        android:background="?attr/colorControlHighlight"
+        android:background="@color/colorPrimaryDark"
         android:gravity="bottom|end"
         android:layout_alignParentBottom="true">
 
@@ -170,28 +75,38 @@ AutoCompleteTextView widget, discussed in greater detail in Chapter 12."
             android:paddingBottom="22dp"
             android:layout_weight="1.07"
             android:weightSum="1"
-            android:paddingLeft="15dp">
+            android:paddingLeft="15dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:text="146"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textAlignment="center"
+                android:padding="5dp"
+                android:textColor="@android:color/background_light" />
 
             <EditText
                 android:id="@+id/msg_txt"
                 android:hint="Enter Message"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
+                android:layout_height="match_parent"
 
 
                 android:elegantTextHeight="false"
-                android:layout_gravity="bottom"
-                android:padding="10dp"
                 android:background="@android:color/background_light"
-                android:foregroundGravity="top|center"
-                android:maxHeight="75dp" />
+                android:maxHeight="100dp"
+                android:maxLines="146"
+                android:padding="10dp"
+                android:paddingLeft="10dp"
+                android:gravity="top" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="bottom|end">
+            android:gravity="center_vertical">
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/fab"
@@ -199,14 +114,14 @@ AutoCompleteTextView widget, discussed in greater detail in Chapter 12."
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|center_vertical|end"
                 android:layout_margin="@dimen/fab_margin"
-                android:layout_marginTop="33dp"
+                android:layout_marginTop="0dp"
                 android:background="@android:drawable/ic_menu_send"
                 app:elevation="6dp"
-                app:backgroundTintMode="src_in"
+                app:backgroundTintMode="multiply"
                 android:src="@android:drawable/ic_menu_send"
                 app:srcCompat="@android:drawable/ic_menu_send"
                 android:scaleType="center"
-                app:backgroundTint="@android:color/holo_green_dark"
+                app:backgroundTint="@android:color/holo_blue_dark"
                 />
         </LinearLayout>
 
