--- a/app/src/main/res/layout/my_single_msg.xml
+++ b/app/src/main/res/layout/my_single_msg.xml
@@ -2,21 +2,30 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:paddingLeft="10dp"
-    android:gravity="bottom|right"
+android:orientation="vertical"
     android:padding="2dp"
     android:layout_height="wrap_content"
    >
 
 
+    <LinearLayout
+
+        android:id="@+id/my_msg_holder"
+        android:layout_width="match_parent"
+        android:gravity="right"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        >
         <LinearLayout
             android:id="@+id/my_msg_txt_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
-
             android:paddingRight="10dp"
             android:background="@drawable/right_arrow"
-            android:layout_marginLeft="10dp">
+            android:layout_marginLeft="10dp"
+
+            >
             <TextView
                 android:id="@+id/my_msg_txt"
                 android:text="Another flavor of field is one
@@ -33,4 +42,41 @@ AutoCompleteTextView widget, discussed in greater detail in Chapter 12."
 
         </LinearLayout>
 
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/his_msg_holder"
+        android:layout_width="match_parent"
+        android:gravity="left"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        >
+        <LinearLayout
+            android:id="@+id/his_msg_txt_layout"
+            android:layout_width="wrap_content"
+
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+
+            android:paddingRight="10dp"
+            android:background="@drawable/left_arrow"
+            android:layout_marginLeft="10dp">
+            <TextView
+                android:id="@+id/his_msg_txt"
+                android:text="Another flavor of field is one
+AutoCompleteTextView widget, discussed in greater detail in Chapter 12."
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="5dp"
+                android:textSize="16sp"
+                android:textAllCaps="false"
+                android:paddingRight="5dp"
+                android:maxWidth="250dp"
+                android:lineSpacingExtra="3dp" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
 </RelativeLayout>
+
