--- a/app/src/main/res/drawable/right_arrow.xml
+++ b/app/src/main/res/drawable/right_arrow.xml
@@ -1,15 +1,15 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <solid android:color="#b9097936" />
+    <solid android:color="#c5e9fabd" />
 
     <stroke
-        android:width="0dp"
-        android:color="#98AFC7" />
+        android:width="0.5dp"
+        android:color="#cc111112" />
 
     <corners
 
         android:bottomLeftRadius="30dp"
-        android:bottomRightRadius="10dp"
+        android:bottomRightRadius="30dp"
         android:topLeftRadius="30dp"
         android:topRightRadius="0dp" />
 
