--- a/app/src/main/res/layout/date_indicatr.xml
+++ b/app/src/main/res/layout/date_indicatr.xml
@@ -5,10 +5,11 @@
     <LinearLayout
         android:id="@+id/date_indctr"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
 
         android:gravity="center_horizontal"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:padding="10dp">
 
         <TextView
             android:layout_width="wrap_content"
